@@ -16,6 +16,7 @@
 package net.hasor.core.setting;
 import java.io.IOException;
 import java.util.Date;
+import java.util.List;
 import java.util.Set;
 import net.hasor.core.Settings;
 import net.hasor.core.XmlNode;
@@ -225,5 +226,8 @@ public class SettingsWarp implements Settings {
     }
     public XmlNode[] getXmlNodeArray(String name) {
         return this.settings.getXmlNodeArray(name);
+    }
+    public List<XmlNode> merageXmlNode(String parentNameSpace, String elementNode) {
+        return this.settings.merageXmlNode(parentNameSpace, elementNode);
     }
 }
